<resources>
    <string name="app_name">MyChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="message_editing">Message editing</string>
    <array name="message_action">
        <item>Delete</item>
        <item>Change message</item>
    </array>
</resources>